--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "dev:patient": "npm run dev -w apps/patient",
     "dev:doctor": "npm run dev -w apps/doctor",
     "dev:ws": "tsx watch server/ws-server.ts",
-    "dev:all": "concurrently \"npm run dev:patient\" \"npm run dev:doctor\" \"npm run dev:ws\""
+    "dev:all": "concurrently \"npm run dev:patient\" \"npm run dev:doctor\" \"npm run dev:ws\"",
+    "test:stress-ehr": "tsx tests/stress-ehr.ts",
+    "test:stress-conversation": "tsx tests/stress-conversation.ts",
+    "test:eval-extraction": "tsx tests/eval-extraction.ts",
+    "test:seed": "tsx tests/seed-synthea.ts",
+    "test:benchmark": "tsx tests/benchmark.ts"
   },
   "devDependencies": {
     "@types/ws": "^8.18.1",
     "concurrently": "^9.1.2",
+    "hyparquet": "^1.25.0",
     "playwright": "^1.58.2",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3"
