--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev:doctor": "npm run dev -w apps/doctor",
     "dev:portal": "npm run dev -w apps/portal",
     "dev:ws": "tsx watch server/ws-server.ts",
+    "start:ws": "tsx server/production.ts",
     "dev:all": "concurrently \"npm run dev:patient\" \"npm run dev:doctor\" \"npm run dev:portal\" \"npm run dev:ws\"",
     "dev:kill": "{ lsof -ti :3000; lsof -ti :3001; lsof -ti :3002; lsof -ti :3003; } 2>/dev/null | sort -u | xargs kill -9 2>/dev/null; echo 'Ports 3000, 3001, 3002, 3003 freed'",
     "test:stress-ehr": "tsx tests/stress-ehr.ts",
